# pb-wave-agent-hub

./: .gitignore  README.md  README.zh-CN.md  SKILL.md  crontab.example  pyproject.toml
app/: app.js  index.html  styles.css
configs/: month_replay.example.json  month_replay.minimal_example.json
data/examples/month_2026_05/: skill_example.json
docs/: architecture.md  architecture.zh-CN.md  demo-script.md  demo-script.zh-CN.md  example-prompts.md  github-homepage-copy.md  github-homepage-copy.zh-CN.md  skill-usage.md  strategy-skill-schema.md  strategy-skill-schema.zh-CN.md  submission-template.md  submission-template.zh-CN.md  track2-positioning.md  track2-positioning.zh-CN.md
runtime/: run_wave_short_1h_A_profit_expansion_matrix.py  run_wave_short_1h_breakdown_continuation_study.py  run_wave_short_1h_continuation_exit_study.py  run_wave_short_1h_continuation_prototype_v1.py  run_wave_short_1h_oi_failure_swing_matrix.py  run_wave_short_1h_oi_softscore_study.py  run_wave_short_1h_rebuild_then_dump_study.py  run_wave_short_1h_retop_shelf_breakdown_study.py  run_wave_short_kline_backtest.py  run_wave_short_perp_context_loader.py
scripts/: pb_wave_collector.py  pb_wave_paper_trader.py  run_skill.py
services/: server.py
src/pb_wave_agent_hub/: __init__.py  config.py  http.py  schemas.py
src/pb_wave_agent_hub/cli/: build_history_sync_plan.py  build_snapshot_manifest.py  export_strategy_skill.py  fetch_daily_snapshot.py  fetch_snapshot_range.py  import_legacy_snapshots.py  run_batch_replay.py  run_replay.py  sync_binance_history.py  (+1 more)
tests/: test_minimal_replay.py
(+52 files in other folders)
